Fix Mobile: Events Archive layout issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5192,19 +5192,19 @@ body.page-id-13 .hocus\:bg-primary-70:hover, body.page-id-13 .hocus\:bg-primary-
 }
 
 @media (min-width: 992px) {
-  .post-type-archive-resources .beefup__body > div > * {
+  .post-type-archive-resources .beefup__body > div > *, .page-template-template-archive-events .beefup__body > div > * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
   }
 
-  .post-type-archive-resources .beefup__body > div > :nth-child(1) {
+  .post-type-archive-resources .beefup__body > div > :nth-child(1), .page-template-template-archive-events .beefup__body > div > :nth-child(1) {
     width: -webkit-calc(28% + 1px) !important;
     width: -moz-calc(28% + 1px) !important;
     width: calc(28% + 1px) !important;
   }
 
-  .post-type-archive-resources .beefup__body > div > :nth-child(2) {
+  .post-type-archive-resources .beefup__body > div > :nth-child(2), .page-template-template-archive-events .beefup__body > div > :nth-child(2) {
     width: -webkit-calc(72% - 1px) !important;
     width: -moz-calc(72% - 1px) !important;
     width: calc(72% - 1px) !important;
