--- a/assets/css/partials/theme.pcss
+++ b/assets/css/partials/theme.pcss
@@ -84,7 +84,8 @@
   }
 }
 
-.post-type-archive-resources {
+.post-type-archive-resources,
+.page-template-template-archive-events {
   & .beefup__body > div {
     @screen lg {
       & > * { box-sizing: border-box; }
